# beamform_project

./: .gitignore  CMakeLists.txt  README.md
include/beamformer/: complex.hpp  config.hpp  cpu_beamformer.hpp  cuda_beamformer.hpp  formats.hpp  geometry.hpp  indexing.hpp  int4.hpp  io.hpp  physics.hpp  synthetic_data.hpp  weights.hpp
results/: cpu_cuda_benchmark_metadata.json  cpu_cuda_benchmark_summary.csv  cpu_cuda_benchmark_timings.csv  cpu_cuda_benchmark_validation.csv  cpu_cuda_point_source_32beam_metrics.json  cpu_cuda_point_source_32beam_metrics_nxd_grid.json
src/: cpu_beamformer.cpp  cuda_beamformer.cu  geometry.cpp  io.cpp  synthetic_data.cpp  weights.cpp
tests/: test_contract.cpp  test_cpu_beamformer.cpp  test_cuda_point_source.cpp  test_geometry.cpp  test_plot_benchmark.py  test_plot_results.py  test_synthetic_data.cpp
tools/: beamformer_cpu.cpp  beamformer_cuda.cpp  benchmark_cpu_cuda.cpp  generate_fake_data.cpp  generate_weights.cpp  plot_benchmark.py  plot_results.py
